--- a/over1.html
+++ b/over1.html
@@ -389,7 +389,7 @@
     </tr>
     <tr>
         <td>ITY</td>
-        <td>Inter milan - AC milan</td>
+        <td>Inter milan - Roma</td>
     </tr>
 </table>
 <br>
