--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
     .fa-copyright{padding-bottom: 20px;
     padding-right: 3px;
     }
+
+    .fb-customerchat{font-size:80px;
+    }
 </style>
 </head>
 <body id="hm">
