--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 </script>
     <title>Emmirald Analysis Football Prediction Website</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="logo.png">
 <style>
     
     .container-fluid{background-color: blue;
