--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://kit.fontawesome.com/962f8df9a9.js" crossorigin="anonymous">
     
 </script>
-    <title>
+    <title> Emmirald Analysis Football Betting Prediction Website
     <link rel="icon" type="image/x-icon" href="logo.png">
     </title>
 <style>
