--- a/doublechance.html
+++ b/doublechance.html
@@ -369,23 +369,23 @@
     </tr>
     <tr>
     <td>GER</td>
-    <td>frankfurt - Mainz</td>
+    <td>frankfurt - Mainz (1X)</td>
     </tr>
     <tr>
         <td>ENG</td>
-        <td>chealsea - Arsenal</td>
+        <td>chealsea - Arsenal (12)</td>
     </tr>
     <tr>
         <td>SPN</td>
-        <td>R.madrid - Barcelona</td>
+        <td>R.madrid - Barcelona (12)</td>
     </tr>
     <tr>
         <td>FRA</td>
-        <td>PSG - Monaco</td>
+        <td>PSG - Monaco (1X)</td>
     </tr>
     <tr>
         <td>ITY</td>
-        <td>Inter milan - AC milan</td>
+        <td>Inter milan - AC milan (X2)</td>
     </tr>
 </table>
 <br>
