--- a/doublechance.html
+++ b/doublechance.html
@@ -366,26 +366,32 @@
     <tr>
         <th>Country</th>
         <th>Double chance tips</th>
+        <th>prediction</th>
     </tr>
     <tr>
     <td>GER</td>
-    <td>frankfurt - Mainz (1X)</td>
+    <td>frankfurt - Mainz </td>
+        <td>1X</td>
     </tr>
     <tr>
         <td>ENG</td>
-        <td>chealsea - Arsenal (12)</td>
+        <td>chealsea - Arsenal </td>
+        <td>12</td>
     </tr>
     <tr>
         <td>SPN</td>
-        <td>R.madrid - Barcelona (12)</td>
+        <td>R.madrid - Barcelona </td>
+        <td>X2</td>
     </tr>
     <tr>
         <td>FRA</td>
-        <td>PSG - Monaco (1X)</td>
+        <td>PSG - Monaco </td>
+        <td>1X</td>
     </tr>
     <tr>
         <td>ITY</td>
-        <td>Inter milan - AC milan (X2)</td>
+        <td>Inter milan - AC milan </td>
+        <td>X2</td>
     </tr>
 </table>
 <br>
