--- a/handicap.html
+++ b/handicap.html
@@ -366,26 +366,32 @@
     <tr>
         <th>Country</th>
         <th>Handicap tips</th>
+        <th>Prediction</th>
     </tr>
     <tr>
     <td>GER</td>
     <td>frankfurt - Mainz</td>
+        <td>home(0-2)</td>
     </tr>
     <tr>
         <td>ENG</td>
         <td>chealsea - Arsenal</td>
+        <td>away(1-0)</td>
     </tr>
     <tr>
         <td>SPN</td>
         <td>R.madrid - Barcelona</td>
+        <td>away(2-0)</td>
     </tr>
     <tr>
         <td>FRA</td>
         <td>PSG - Monaco</td>
+        <td>home(0-0)</td>
     </tr>
     <tr>
         <td>ITY</td>
         <td>Inter milan - AC milan</td>
+        <td>home(0-1)</td>
     </tr>
 </table>
 <br>
