--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <script src="https://kit.fontawesome.com/962f8df9a9.js" crossorigin="anonymous">
     
 </script>
-    <title> Emmirald Analysis Football Betting Prediction Website
-    <link rel="icon" type="image/x-icon" href="logo.png">
-    </title>
+    <title> Emmirald Analysis Football Betting Prediction Website</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
     
     .container-fluid{background-color: blue;
