--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 </script>
     <title> Emmirald Analysis Football Betting Prediction Website</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="image/favicon.ico" type="image/x-icon">
 <style>
     
     .container-fluid{background-color: blue;
